# tcp_filetransfer

./: CMakeLists.txt  README.md  list.txt
src/: client.c  color.h  server.c
